# open-model-archive

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  SETUP.md  package-lock.json  package.json  pyproject.toml  vercel.json
.github/workflows/: build-site.yml  pages.yml
api/_lib/: auth.js  cors.js  storage.js
api/auth/: callback.js  login.js  me.js
api/votes/: index.js
docs/: index.html
docs/about/: index.html
docs/assets/css/: main.css
models/: _template.yaml  agy-sonnet-example.yaml  anthropic-claude-fable-5.yaml  anthropic-claude-mythos-5.yaml  anthropic-claude-sonnet-5.yaml  claude-opus.yaml  claude-sonnet.yaml  fireworks-llama.yaml  google-gemini-3.1-pro.yaml  google-gemini-3.5-flash-high.yaml  grok-composer-2.5-fast.yaml  ollama-gemma4.yaml  ollama-glm-5.yaml  ollama-kimi-k2.7-code.yaml  ollama-nemotron-3-super.yaml  openai-gpt-5.4.yaml  openai-gpt-5.5-instant.yaml  openai-gpt-5.5.yaml  openrouter-llama.yaml  sarvam-m.yaml  together-llama.yaml
registry/: site.yaml  topics.yaml
scripts/: screenshot.mjs
src/oma/: __init__.py  cli.py  paths.py  validate.py
tasks/blog-writing/: api-versioning-guide.yaml  config-drift-post.yaml  monorepo-opinion.yaml
tasks/code-generation/: lru-cache.yaml  rate-limiter.yaml  slugify-utility.yaml
tasks/creative-fiction/: product-review.yaml  startup-launch.yaml
tasks/design-critique/: landing-review.yaml  mobile-first-critique.yaml
tasks/game-generation/: tile-merge-puzzle.yaml  voxel-lane-hopper.yaml
tasks/humor-testing/: git-cooking.yaml  kubernetes-golden-retriever.yaml
(+393 files in other folders)
