[project]
name = "open-model-archive"
version = "0.1.0"
description = "A transparent public archive comparing AI model outputs on identical real-world tasks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.4",
    "httpx>=0.28.0",
    "markdown>=3.7",
    "tiktoken>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.scripts]
oma = "oma.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oma"]

[tool.ruff]
line-length = 100
target-version = "py312"